<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.juha.foodrecipeapp.recipeListActivity">
    <item
        android:id="@+id/menu_item_favourites_recipes"
        android:orderInCategory="100"
        android:title="@string/menu_item_favourite_recipes"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_sort_By"
        android:title="@string/sort_by" >
        <menu>
            <item
                android:visible="true"
                android:id="@+id/menu_item_popularity"
                android:title="@string/popularity" />
            <item
                android:visible="true"
                android:id="@+id/menu_item_trendiness"
                android:title="@string/trendiness" />
        </menu>
    </item>
</menu>