<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_detail"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:textIsSelectable="true"
    tools:context="com.example.juha.foodrecipeapp.recipeDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/recipe_detail_image"
            android:adjustViewBounds="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_desc_recipe_image"
            android:scaleType="fitXY"
            android:src="@drawable/ic_place_holder" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/recipe_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_desc_recipe_title"
            android:text="@string/empty"
            tools:text="@string/content_desc_recipe_title" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/recipe_detail_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_desc_recipe_ingredients"
            android:text="@string/empty"
            tools:text="@string/content_desc_recipe_ingredients" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/recipe_detail_button_add_to_favourites"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_to_favourites"
            android:text="@string/add_to_favourites"
            android:visibility="visible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/source_url_text"
            android:text="@string/source_url_text" />

        <TextView
            android:id="@+id/recipe_detail_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_desc_recipe_source"
            android:text="@string/content_desc_recipe_source"
            tools:text="@string/content_desc_recipe_source" />

    </LinearLayout>
</ScrollView>
